force-app/main/default/objects/Tanque_industrial__c/Tanque_industrial__c.object-meta.xml
<CustomObject>
    <label>Tanque industrial</label>
    <nameField>
        <label>Tanque industrial Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tanques industriales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>