force-app/main/default/objects/Tanque_industrial__c/fields/Numero_de_serie__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_serie__c</fullName>
    <displayFormat>I-{0000}</displayFormat>
    <label>Numero de serie</label>
    <type>AutoNumber</type>
</CustomField>