force-app/main/default/objects/Tanque_industrial__c/fields/tipo_de_tanque__c.field-meta.xml
<CustomField>
    <fullName>tipo_de_tanque__c</fullName>
    <label>tipo de tanque</label>
    <referenceTo>Tipo_de_tanque__c</referenceTo>
    <relationshipLabel>tipo de tanque</relationshipLabel>
    <relationshipName>Tanques_industriales</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>